<resources>
  <string name="app_name">AppCoins Wallet</string>
  <string name="title_send">Send</string>
  <string name="title_send_with_token">Send %s</string>
  <string name="title_request">Receive</string>
  <string name="title_import">Recover Wallet</string>
  <string name="bottom_navigation_my_wallets">My Wallets</string>
  <string name="nftMyWallet" translatable="false">NFT Wallet</string>
  <string name="nftTransfer" translatable="false">NFT Transaction</string>
  <string name="prompt_password">Password</string>
  <string name="action_sign_in_short">Create</string>
  <string name="prompt_to">To</string>
  <string name="action_send">Send</string>
  <string name="error_field_required">This field is required</string>
  <string name="action_settings">Settings</string>
  <string name="title_account_list">Wallets</string>
  <string name="cancel">cancel</string>
  <string name="confirm_delete_account">Make sure that you have a backup of this wallet.</string>
  <string name="action_import">Recover</string>
  <string name="copy">Copy to clipboard</string>
  <string name="copied">Copied!</string>
  <string name="close">Close</string>
  <string name="title_activity_settings">Settings</string>
  <string name="network_label">Network</string>
  <string name="credits">Credits</string>
  <string name="label_new">New</string>
  <string name="got_it_button">GOT IT</string>
  <string name="change_button">CHANGE</string>
  <string name="vip">VIP</string>
  <string name="low_storage_error">Not enough storage space</string>
  <string name="no_camera_permission_title">Camera Permission</string>
  <string name="no_camera_permission">AppCoins BDS Wallet needs permission to access your camera to scan QR codes.</string>
  <string name="no_camera_available">No camera available!</string>
  <string name="ok">Ok</string>
  <string name="barcode_error_format">Invalid barcode format: %s</string>
  <string name="title_delete_account">Are you sure you want to remove this wallet?</string>
  <string name="twitter">Twitter</string>
  <string name="telegram">Telegram Group</string>
  <string name="title_community">Community</string>
  <string name="title_opensource">Open Source Development</string>
  <string name="title_source_code">Source code</string>
  <string name="title_report_bug">Report a bug</string>
  <string name="title_support">Support</string>
  <string name="title_permissions">Permissions</string>
  <string name="permissions_title">Permissions</string>
  <string name="permissions_active_wallet_short">Current active wallet</string>
  <string name="error_import">Error importing keystore</string>
  <string name="message_this_is_your_address">My public Ethereum wallet address</string>
  <string name="backup_warning_text">Since only you control your money, you\'ll need to save a backup of your keystore in case this app is deleted.\n\nYour wallet is never saved to cloud storage or standard device backups.</string>
  <string name="message_no_backup">No backup, no Ethereum</string>
  <string name="error_deleting_account">Error deleting wallet</string>
  <string name="title_privacy_policy">Privacy Policy</string>
  <string name="title_terms">Terms and Conditions</string>
  <string name="title_version">Version</string>
  <string name="title_tokens">My Tokens</string>
  <string name="unlock_screen_title_android">Unlock screen</string>
  <string name="unlock_screen_prompt_android">Please unlock your Android device to continue.</string>
  <string name="do_manage_make_backup">Did you successfully make a backup?</string>
  <string name="yes_continue">Yes, continue</string>
  <string name="yes_done_button">Yes, done</string>
  <string name="no_repeat">No, repeat</string>
  <string name="skip">Skip</string>
  <string name="skip_with_arrow">Skip &gt;</string>
  <string name="root_title">DEVICE SECURITY COMPROMISED</string>
  <string name="root_body">Any \'rooted\' app can access AppCoins Wallet\'s keychain data and steal your wallet! Wipe this wallet immediately and restore on a secure device.</string>
  <string name="credits_purchase_value">%s APPC Credits</string>
  <string name="buying">Buying %s</string>
  <string name="action_buy">Buy</string>
  <string name="empty"/>
  <string name="try_again">Try again</string>
  <string name="already_have_account">Already have a wallet?</string>
  <string name="action_create_new_account">Create new wallet</string>
  <string name="unknown_error">An error has occurred.</string>
  <string name="action_backup_wallet">Backup Wallet</string>
  <string name="no_tokens">You haven\'t added any custom token yet.</string>
  <string name="title_email">Email us</string>
  <string name="action_donate">Donate</string>
  <string name="title_my_address">Receive</string>
  <string name="title_my_tokens">My Tokens</string>
  <string name="title_activity_send">Send</string>
  <string name="title_activity_confirmation">Confirm</string>
  <string name="title_add_token">Add Custom Token</string>
  <string name="title_airdrop">Airdrop</string>
  <string name="suggestion_private_key">Private key has to be 64 characters long</string>
  <string name="suggestion_empty_password_available">The password can be left blank.</string>
  <string name="suggestion_this_is_your_address">My public %s wallet address</string>
  <string name="hint_private_key_field">Private key *</string>
  <string name="hint_keystore">Keystore *</string>
  <string name="tab_keystore">Keystore</string>
  <string name="tab_private_key">Private key</string>
  <string name="title_dialog_error">Error</string>
  <string name="title_dialog_handling">Processing…</string>
  <string name="title_dialog_add_account">Add wallet</string>
  <string name="title_dialog_deposit">How would you like to buy?</string>
  <string name="title_dialog_close_channel">Close channel</string>
  <string name="dialog_message">Set a password to encrypt your wallet</string>
  <string name="toast_message_wallet_imported">The wallet was recovered</string>
  <string name="toast_message_wallet_exported">A backup was created</string>
  <string name="toast_qr_code_no_address">QR code doesn\'t contain a valid address</string>
  <string name="dialog_message_close_channel">Are you sure you want to close this µRaiden channel? </string>
  <string name="intro_title_first_page">AppCoins Wallet</string>
  <string name="intro_title_second_page"><![CDATA[Private & Secure]]></string>
  <string name="intro_title_third_page">Simple &amp; Easy</string>
  <string name="intro_message_first_page">Welcome to the revolution of the app economy.</string>
  <string name="intro_message_second_page">Private keys never leave your device.</string>
  <string name="intro_message_third_page">Process all your in-app payments and rewards in APPC.</string>
  <string name="intro_1_title">AppCoins Wallet</string>
  <string name="intro_1_body">Your app for in-app purchases.</string>
  <string name="intro_2_title">Play More, Pay Less</string>
  <string name="intro_2_body">Get rewarded for buying items in your favorite apps and games.</string>
  <string name="intro_3_title">Simple and Easy</string>
  <string name="intro_3_body">Process all your in-app purchases using your favorite payment method.</string>
  <string name="intro_4_title">Secure and Private</string>
  <string name="intro_4_body">Your private info will never leave your device, so your AppCoins are safe at all times.</string>
  <string name="intro_4_body_2">All your transactions are always safe thanks to the latest technology.</string>
  <string name="intro_5_title">Get Free AppCoins Credits!</string>
  <string name="intro_5_body">You\'ll earn free AppCoins Credits by trying apps and games.</string>
  <string name="intro_creating_wallet_short">Setting up your wallet for you&#8230;</string>
  <string name="intro_wallet_created_short">Wallet created!</string>
  <string name="intro_agree_terms_and_conditions_body">By tapping on Skip, you agree to AppCoins Wallet’s %1$s and %2$s</string>
  <string name="intro_skip_button">SKIP</string>
  <string name="label_from">From</string>
  <string name="label_to">To</string>
  <string name="label_gas_limit">Gas Limit</string>
  <string name="label_gas_price">Gas Price</string>
  <string name="label_network_fee">Network Fee</string>
  <string name="button_ok">OK</string>
  <string name="button_transact">Transaction</string>
  <string name="hint_recipient_address">Recipient Address</string>
  <string name="hint_amount">Amount</string>
  <string name="hint_amount_with_token">Amount %s</string>
  <string name="hint_contract_address">Contract address</string>
  <string name="hint_contract_symbol">Symbol</string>
  <string name="hint_contract_decimals">Decimals</string>
  <string name="button_cancel">CANCEL</string>
  <string name="button_yes">YES</string>
  <string name="subtitle_from">From</string>
  <string name="subtitle_gas_fee">Fee</string>
  <string name="subtitle_transaction_num">Transaction</string>
  <string name="action_more_details">More</string>
  <string name="action_add_wallet">Add wallet</string>
  <string name="action_coinbase">Coinbase</string>
  <string name="action_shapeshift">Shapeshift (Crypto only)</string>
  <string name="action_changelly">Changelly</string>
  <string name="action_wallets">Wallets</string>
  <string name="action_next">Next</string>
  <string name="action_edit">Edit</string>
  <string name="action_save">Save</string>
  <string name="error_fail_generate_qr">Could not generate QR code.</string>
  <string name="error_invalid_address">Invalid address</string>
  <string name="error_invalid_amount">Invalid amount</string>
  <string name="error_transaction_failed">Transaction error</string>
  <string name="error_must_numeric">It must be a numeric value.</string>
  <string name="transaction_succeeded">Transaction successful</string>
  <string name="NA">N/A</string>
  <string name="error_wallet_not_selected">Wallet is not selected</string>
  <string name="no_transactions_yet">Get some test APPC so you can see how AppCoins payments will work</string>
  <string name="no_transactions_yet_main">No transactions yet!</string>
  <string name="unknown_balance_with_symbol">-- ETH</string>
  <string name="unknown_balance_without_symbol">--</string>
  <string name="dummy">-</string>
  <string name="dummy_transaction_value">-- ETH</string>
  <string name="title_dialog_sending">Sending...</string>
  <string name="welcome.erc20.label.title">ERC20 Compatible</string>
  <string name="welcome.erc20.label.description">Supports ERC20 tokens by default.</string>
  <string name="scan_qr">Get address from QR Code</string>
  <string name="info_gas_price">The higher the gas price, the more expensive your transaction fee will be, but the quicker your transaction will be processed by the Ethereum network.</string>
  <string name="info_gas_limit">The gas limit prevents smart contracts from consuming all your Ethereum. We will try to calculate the gas limit automatically for you, but some smart contracts may require a custom gas limit.</string>
  <string name="title_send_settings">Advanced</string>
  <string name="title_activity_barcode">Barcode Scan</string>
  <string name="error_add_token">Couldn\'t add token.</string>
  <string name="facebook">Facebook</string>
  <string name="nft">NFT</string>
  <string name="error_already_added">Already added</string>
  <string name="error_export">Failed to export the wallet</string>
  <string name="error_fail_load_tokens">Failed to load tokens list</string>
  <string name="error_create_wallet">Failed to create a wallet</string>
  <string name="token_balance">%1$s%2$s %3$s</string>
  <string name="balance_ethereum_body">Ethereum is the cryptocurrency that AppCoins are based on. You can buy and sell them in most exchanges, it\'s very popular!</string>
  <string name="p2p_send_body">Scan or enter your friend\'s wallet address.</string>
  <string name="ethereum_token_name" translatable="false">Ethereum</string>
</resources>