<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_translucent"
    android:gravity="center"
    android:clickable="true"
    >
  <androidx.constraintlayout.widget.ConstraintLayout
      android:id="@+id/container"
      android:layout_width="328dp"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:animateLayoutChanges="true"
      android:background="@drawable/background_card"
      android:clipToPadding="false"
      android:minHeight="304dp"
      android:padding="16dp"
      android:transitionName="nftAssetLayout"
      >

    <TextView
        android:id="@+id/schema"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ERCXXXX"
        android:textSize="12dp"
        android:textColor="@drawable/btn_light_text_color"
        android:background="@drawable/rectangle_outline_red"
        android:transitionName="nftAssetName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingVertical="2dp"
        android:paddingHorizontal="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        app:layout_constraintVertical_bias="0"
        />
    <ImageView
        android:id="@+id/token_icon"
        android:layout_width="164dp"
        android:layout_height="162dp"
        android:layout_marginTop="45dp"
        android:src="@drawable/ic_eth_token"
        android:transitionName="nftAssetImage"
        app:layout_constraintBottom_toTopOf="@id/token_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintVertical_chainStyle="packed"
        />

    <TextView
        android:id="@+id/token_name"
        style="@style/TokenDetailsTitleStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/ethereum_token_name"
        android:transitionName="nftAssetName"
        app:layout_constraintBottom_toTopOf="@+id/token_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/token_icon"
        app:layout_constraintVertical_bias="0"
        />
    <TextView
        android:id="@+id/token_description"
        style="@style/TokenDetailsTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="18dp"
        android:gravity="center"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/balance_ethereum_body"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/token_name"
        app:layout_constraintVertical_bias="0"
        />

    <Button
        android:id="@+id/transact_btn"
        style="@style/ButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginTop="21dp"
        android:minWidth="104dp"
        android:text="@string/button_transact"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/close_btn"
        app:layout_constraintHorizontal_bias="0.903"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/token_description"
        app:layout_constraintVertical_bias="0.058"
        />
    <Button
        android:id="@+id/close_btn"
        style="@style/ButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginTop="21dp"
        android:minWidth="104dp"
        android:text="@string/button_ok"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/token_description"
        app:layout_constraintVertical_bias="1"
        />
  </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>
