<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
  <include
      layout="@layout/layout_app_bar"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      />

  <ScrollView
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:background="@drawable/background_card"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/app_bar"
      >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
      <ProgressBar
          android:id="@+id/loading"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="50dp"
          android:layout_marginBottom="50dp"
          android:indeterminateDrawable="@drawable/gradient_progress"
          android:visibility="gone"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          />
      <include
          android:id="@+id/complete_payment_view"
          layout="@layout/fragment_iab_transaction_completed"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:visibility="invisible"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          />
      <TextView
          android:id="@+id/title"
          style="@style/TextAppearance.AppCompat.Body1.Roboto.Medium"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginStart="32dp"
          android:layout_marginTop="95dp"
          android:layout_marginEnd="32dp"
          android:ellipsize="end"
          android:gravity="center"
          android:text="@string/p2p_send_body"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintVertical_bias="0"
          />

      <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/transact_fragment_recipient_address_layout"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginStart="32dp"
          android:layout_marginTop="64dp"
          android:layout_marginEnd="32dp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/title"
          >
        <EditText
            android:id="@+id/transact_fragment_recipient_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_recipient_address"
            android:imeOptions="flagNoExtractUi|flagNoFullscreen"
            android:inputType="text"
            android:maxLines="1"
            android:paddingEnd="45dp"
            />
      </com.google.android.material.textfield.TextInputLayout>

      <androidx.constraintlayout.widget.ConstraintLayout
          android:id="@+id/atransact_fragment_recipient_address_layout"
          android:layout_width="0dp"
          android:layout_height="80dp"
          android:layout_marginStart="32dp"
          android:layout_marginTop="32dp"
          android:layout_marginEnd="32dp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/transact_fragment_recipient_address_layout"
          >
        <TextView
            android:id="@+id/nft_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_recipient_address"
            android:imeOptions="flagNoExtractUi|flagNoFullscreen"
            android:paddingStart="90dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"

            app:layout_constraintTop_toTopOf="parent"
            />
      </androidx.constraintlayout.widget.ConstraintLayout>
      <ImageView
          android:id="@+id/nft_image"
          android:layout_width="80dp"
          android:layout_height="80dp"
          android:background="?android:attr/selectableItemBackgroundBorderless"
          android:padding="@dimen/ccp_padding"
          android:src="@drawable/gamification_lock"
          app:layout_constraintBottom_toBottomOf="@+id/atransact_fragment_recipient_address_layout"
          app:layout_constraintEnd_toEndOf="@+id/atransact_fragment_recipient_address_layout"
          app:layout_constraintHorizontal_bias="0"
          app:layout_constraintStart_toStartOf="@+id/atransact_fragment_recipient_address_layout"
          app:layout_constraintTop_toTopOf="@id/atransact_fragment_recipient_address_layout"
          />

      <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/transact_fragment_amount_layout"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginStart="32dp"
          android:layout_marginTop="24dp"
          android:layout_marginEnd="32dp"
          android:visibility="gone"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/atransact_fragment_recipient_address_layout"
          >
        <EditText
            android:id="@+id/transact_fragment_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_amount"
            android:imeOptions="actionDone|flagNoExtractUi|flagNoFullscreen"
            android:inputType="numberDecimal"
            />
      </com.google.android.material.textfield.TextInputLayout>

      <Button
          android:id="@+id/send_button"
          style="@style/ButtonStyle"
          android:layout_width="0dp"
          android:layout_height="36dp"
          android:layout_marginStart="32dp"
          android:layout_marginTop="24dp"
          android:layout_marginEnd="32dp"
          android:layout_marginBottom="16dp"
          android:text="@string/action_send"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/transact_fragment_amount_layout"
          />
    </androidx.constraintlayout.widget.ConstraintLayout>
  </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>